force-app/main/default/objects/Project__c/fields/Days_Until_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Follow_Up_Date__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &apos;On Hold&apos;)  || ISPICKVAL( Status__c , &apos;Stopped&apos;) , Follow_Up_Date__c - TODAY(), NULL)</formula>
    <label>Days Until Follow Up Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>