force-app/main/default/objects/Project__c/fields/Divisional_Strategic_Themes__c.field-meta.xml
<CustomField>
    <fullName>Divisional_Strategic_Themes__c</fullName>
    <label>Divisional Strategic Themes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Divisional_Strategic_Themes</valueSetName>
    </valueSet>
</CustomField>