force-app/main/default/objects/Project__c/fields/Enable_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sharepoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sharepoint</label>
    <type>Checkbox</type>
</CustomField>