force-app/main/default/objects/Project__c/fields/Halted_Details__c.field-meta.xml
<CustomField>
    <fullName>Halted_Details__c</fullName>
    <label>Halted Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>