force-app/main/default/objects/Project__c/fields/Halted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Halted_Reason__c</fullName>
    <inlineHelpText>On Hold means postpone and delay decision for now but the Project may move forward later.

Stopped means a decision has been made to not go ahead with the Project for now.</inlineHelpText>
    <label>Halted Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competing Capital</fullName>
            </value>
            <value>
                <fullName>Delayed Government Approval</fullName>
            </value>
            <value>
                <fullName>Design Review</fullName>
            </value>
            <value>
                <fullName>Due to ROI and MPV</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>