force-app/main/default/objects/Project__c/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This should be used mainly when a Salesperson wants to highlight specific Projects based on company reporting requirements.</inlineHelpText>
    <label>Important</label>
    <type>Checkbox</type>
</CustomField>