force-app/main/default/objects/Project__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>The main industry linked to the project</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1MIN</fullName>
                <label>Minerals</label>
            </value>
            <value>
                <fullName>2GEN</fullName>
                <label>General Industrial</label>
            </value>
            <value>
                <fullName>3OIL</fullName>
                <label>Oil Industry</label>
            </value>
            <value>
                <fullName>4NAV</fullName>
                <label>Naval &amp; Marine</label>
            </value>
            <value>
                <fullName>5POW</fullName>
                <label>Power Generation</label>
            </value>
            <value>
                <fullName>6WAT</fullName>
                <label>Water &amp; Sewage</label>
            </value>
            <value>
                <fullName>7INT</fullName>
                <label>Intercompany (Weir)</label>
            </value>
            <value>
                <fullName>8SAN</fullName>
                <label>Infrastructure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>