force-app/main/default/objects/Project__c/fields/Overide_Go__c.field-meta.xml
<CustomField>
    <fullName>Overide_Go__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Oppty Go%</label>
    <type>Checkbox</type>
</CustomField>