force-app/main/default/objects/Project__c/fields/Progress_Update__c.field-meta.xml
<CustomField>
    <fullName>Progress_Update__c</fullName>
    <inlineHelpText>This field should be used to provide a quick progress update and will be displayed in Project reports.  After saving the content will be added to the &quot;Progress Update&quot; (related list). Limited to 140 characters.</inlineHelpText>
    <label>Progress Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>