force-app/main/default/objects/Project__c/fields/Project_Capex__c.field-meta.xml
<CustomField>
    <fullName>Project_Capex__c</fullName>
    <inlineHelpText>Total Value of the Project (not only Weir&apos;s portion)</inlineHelpText>
    <label>Project Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>