force-app/main/default/objects/Project__c/fields/Project_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Contact_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Contact Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Project_Contact_Role__c.Project__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Contact_Role__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>