force-app/main/default/objects/Project__c/fields/Project_Go__c.field-meta.xml
<CustomField>
    <fullName>Project_Go__c</fullName>
    <formula>CASE(  Status__c  , 
&quot;Announcement&quot;, &quot;10%&quot;, 
&quot;Pre-Feasibility&quot;, &quot;25%&quot;, 
&quot;Feasibility&quot;, &quot;40%&quot;, 
&quot;Bankable&quot;, &quot;60%&quot;, 
&quot;Tender&quot;, &quot;70%&quot;, 
&quot;Negotiation&quot;, &quot;90%&quot;, 
&quot;Contract&quot;, &quot;100%&quot;, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Go%</label>
    <type>Text</type>
</CustomField>