force-app/main/default/objects/Project__c/fields/Project_Source__c.field-meta.xml
<CustomField>
    <fullName>Project_Source__c</fullName>
    <inlineHelpText>How did you come to know about this project?</inlineHelpText>
    <label>Project Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Team</fullName>
                <default>true</default>
                <label>Sales Team</label>
            </value>
            <value>
                <fullName>Service Team</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>EPC</fullName>
            </value>
            <value>
                <fullName>Events/Trade Shows</fullName>
            </value>
            <value>
                <fullName>Industry Referral</fullName>
            </value>
            <value>
                <fullName>Project Database</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>