force-app/main/default/objects/Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <inlineHelpText>Is this a new project or the expansion of an existing mine?</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greenfield</fullName>
            </value>
            <value>
                <fullName>Brownfield Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>