force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>The current stage of the project</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Announcement</fullName>
                <default>true</default>
                <label>Announcement</label>
            </value>
            <value>
                <fullName>Pre-Feasibility</fullName>
            </value>
            <value>
                <fullName>Feasibility</fullName>
            </value>
            <value>
                <fullName>Bankable</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
                <isActive>false</isActive>
                <label>Awaiting Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>