force-app/main/default/objects/Project__c/fields/Total_Opportunity_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Sum__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Sum of all publish to forecast opportunities related to this Project.</inlineHelpText>
    <label>Total Opportunity Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>