force-app/main/default/objects/Project__c/validationRules/Account_Obsolete.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Obsolete</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; TEXT(Account__r.Account_Status__c) == &apos;Obsolete&apos;</errorConditionFormula>
    <errorMessage>Project cannot be created for Obsolete Account.</errorMessage>
</ValidationRule>