force-app/main/default/objects/Project__c/validationRules/Stopped_Project_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Stopped_Project_Rule</fullName>
    <active>true</active>
    <description>Projects cannot be Stopped with open Opportunities related to it.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c , &quot;Stopped&quot;),  
    Number_of_Open_Opportunities__c  &gt;= 1)</errorConditionFormula>
    <errorMessage>Project cannot be Stopped because there is one or more open Opportunities related to it.</errorMessage>
</ValidationRule>