force-app/main/default/objects/Project__c/listViews/My_Projects2.listView-meta.xml
<ListView>
    <fullName>My_Projects2</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Go__c</columns>
    <columns>Project_Capex__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
</ListView>